# production_rag_system

./: LICENSE  README.md  pyproject.toml  requirements.txt
docker/: docker-compose.yml
src/production_rag_system/: __init__.py  config.py  ingest.py  query.py
